--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html {
-    background-color: rgb(10, 10, 10);
+    background-color: rgb(26, 26, 26);
     color: rgb(230, 230, 230);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: x-large;
@@ -39,7 +39,7 @@ svg {
     clear: both;
     text-align: center;
     font-size: small;
-    border-top: 1px solid rgb(30, 30, 30);
+    border-top: 1px solid rgb(36, 36, 36);
 }
 
 .footer-content {
@@ -48,11 +48,11 @@ svg {
 }
 
 .email-footer {
-    color: #EFA53A;
+    color: #B03E24;
     float: left;
 }
 
 .discord-footer {
-    color: #454C4E;
+    color: #769161;
     float: right;
 }
