--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html {
-	background-color: #111112;
+	background-color: #1e1e20;
 	color: #F4EBD9;
 	font-family: 'Roboto';
 	text-align: center;
@@ -40,7 +40,7 @@ html {
 
 a {
 	padding: 3vw;
-	color: #444444;
+	color: #555555;
 	text-decoration: none;
 	font-size: 2.5vh;
 }
